fix btn on tablet

--- a/components/TravellersList/TravellersList.module.css
+++ b/components/TravellersList/TravellersList.module.css
@@ -17,7 +17,8 @@
 }
 
 .travellers__item {
-  width: 335px;
+  /* width: 335px; */
+  width: 100%;
   min-width: 250px;
   padding: 24px;
   border-radius: 16px;
@@ -108,9 +109,8 @@
     display: block;
     border: 1px solid #4169e1;
     border-radius: 8px;
-    padding-block: 6px;
-    padding-inline: 12px;
-    width: 156px;
+    padding: 6px 12px;
+    width: 158px;
     height: 48px;
     background: #4169e1;
     font-weight: 500;
